TestSuite/Verification/Error/Serial/Syntax/Expression/out/ArithmeticExpressionTest.cxx
/*********************************************************************/
/*        This is a generated C++ source file.                       */
/*        Generated by PatternDSL.                                   */
/*********************************************************************/

#include <vector>
#include <cstdint>
#include <string>
#include <limits>
#include <iostream>
#include "includes/Patternlib.hxx"
#include "includes/PThreadsLib.hxx"
#include "includes/ArithmeticExpressionTest.hxx"
#include "includes/cuda_lib_ArithmeticExpressionTest.hxx"
#include "mpi.h"
#include "includes/cuda_pool_lib.hxx"
#include "math.h"







/*********************************************************************/
/*        Global Variables                                           */
/*        Generated by PatternDSL .                                  */
/*********************************************************************/



/*********************************************************************/
/*        Function Declarations                                      */
/*        Generated by PatternDSL.                                   */
/*********************************************************************/



int main(int argc, char** argv) {

	double D_ZlyLT4atAS;
	float F_fKGxAYiYNE;
	int32_t I_Ftfsi7HnvU;
	int NUM_CORES;
	int NUM_GPUS;

	int rank, nprocs;
	MPI_Status Stat;
	MPI_Init(&argc, &argv);
	MPI_Comm_size(MPI_COMM_WORLD, &nprocs);
	MPI_Comm_rank(MPI_COMM_WORLD, &rank);
	if (rank == 0 ) {
		NUM_CORES = 48;
		NUM_GPUS = 2;
	} else 	if (rank == 1 ) {
		NUM_CORES = 48;
		NUM_GPUS = 2;
	}
	std::vector<Thread> pool(NUM_CORES);
	setPool(&pool);
	std::vector<Thread> gpu_pool(NUM_GPUS);
	setGPUPool(&gpu_pool);
	startExecution();
	startGPUExecution();
	if (rank == 0) {
		F_fKGxAYiYNE = 1.5;
		D_ZlyLT4atAS = 1.2;
		I_Ftfsi7HnvU = 1;
		I_Ftfsi7HnvU--;
		I_Ftfsi7HnvU++;
		F_fKGxAYiYNE += I_Ftfsi7HnvU;
		F_fKGxAYiYNE -= I_Ftfsi7HnvU;
		F_fKGxAYiYNE *= I_Ftfsi7HnvU;
		F_fKGxAYiYNE = I_Ftfsi7HnvU * (2 + 2);
		F_fKGxAYiYNE = 5 / (3 - 1);
	}
	if (rank == 0) {
		F_fKGxAYiYNE = test() + 2;
	}
	if (rank == 0) {
		I_Ftfsi7HnvU = 5 % 2;
	}
	finishExecution();
	finishGPUExecution();
	MPI_Finalize();
	return 0;


}

